--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -38,6 +38,8 @@ mantis {
 
   network {
     # Ethereum protocol version
+    # Supported versions:
+    # 63, 64 (experimental version which enables usage of messages with checkpointing information. In the future after ETCM-355, ETCM-356, it will be 66 probably)
     protocol-version = 63
 
     server-address {
