[ETCM-273] Change logging behaviour and increase handshake timeout to investigate connection issue

--- a/src/universal/conf/testnet-internal.conf
+++ b/src/universal/conf/testnet-internal.conf
@@ -37,6 +37,9 @@ mantis {
       # All testnet members are assumed to be honest so blacklisting is turned off
       short-blacklist-duration = 0
       long-blacklist-duration = 0
+
+      wait-for-handshake-timeout = 15 seconds
+
     }
 
     rpc {
