[ETCM-109] ECIP-1099 implementation

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -32,6 +32,8 @@ mantis {
 
       byzantium-block-number = "4370000"
 
+      ecip1099-block-number = "1000000000000000000"
+
       # todo change
       constantinople-block-number = "1000000000000000000"
 
