--- a/src/main/resources/chains/ropsten-chain.conf
+++ b/src/main/resources/chains/ropsten-chain.conf
@@ -90,6 +90,11 @@
   # https://ecips.ethereumclassic.org/ECIPs/ecip-1097
   ecip1097-block-number = "1000000000000000000"
 
+
+  # Epoch calibration block number
+  # https://ecips.ethereumclassic.org/ECIPs/ecip-1099
+  ecip1099-block-number = "1000000000000000000"
+
   # DAO fork configuration (Ethereum HF/Classic split)
   # https://blog.ethereum.org/2016/07/20/hard-fork-completed/
   dao {
