[Fix] Added comment on assumption on relation between ECIP 1097 and ECIP 1098 activation block numbers

--- a/src/main/resources/chains/testnet-internal-chain.conf
+++ b/src/main/resources/chains/testnet-internal-chain.conf
@@ -85,6 +85,7 @@
 
     # Checkpointing fork block number
     # https://ecips.ethereumclassic.org/ECIPs/ecip-1097
+    # Has to be equal or greater than ecip1098-block-number
     ecip1097-block-number = "1000000000000000000"
 
     # DAO fork configuration (Ethereum HF/Classic split)
