change rpc fuacet

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -259,7 +259,7 @@ mantis {
   }
 
   blockchains {
-    network = "etc"
+    network = "testnet-internal"
 
     etc {include "chains/etc-chain.conf"}
 
