add akka monitoring

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -532,16 +532,6 @@ mantis {
     }
   }
 
-  metrics {
-    # Set to `true` iff your deployment supports metrics collection.
-    # We expose metrics using a Prometheus server
-    # We default to `false` here because we do not expect all deployments to support metrics collection.
-    enabled = false
-
-    # The port for setting up a Prometheus server over localhost.
-    port = 13798
-  }
-
   async {
     ask-timeout = 100.millis
 
@@ -577,7 +567,6 @@ akka {
     }
   }
 }
-
 
 # DEBUGGING SETTING
 # Uncomment to enable non-standard mailbox for all actors
@@ -621,3 +610,5 @@ logging {
   # Logs filename
   logs-file = "mantis"
 }
+
+include "metrics.conf"
