--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -53,29 +53,48 @@ mantis {
       # Turn discovery of/off
       discovery-enabled = true
 
+      # Externally visible hostname or IP.
+      host = ""
+
       # Listening interface for discovery protocol
       interface = "0.0.0.0"
 
       # Listening port for discovery protocol
       port = 30303
 
-      # Maximum discovered nodes stored (TODO: remove me once full protocol is in place)
-      nodes-limit = 5000
-
-      # Initial delay for discovery scan
-      scan-initial-delay = 20.seconds
+      # If true, the node considers the bootstrap and the previously persisted nodes
+      # as already discovered and uses them as peer candidates to get blocks from.
+      # Otherwise it enroll with the bootstrap nodes and gradually discover the
+      # network every time we start, eventually serving candidates.
+      #
+      # Useful if discovery has problem, as the node can start syncing with the
+      # bootstraps straight away.
+      #
+      # Note that setting reuse-known-nodes and discovery-enabled to false at the
+      # same time would mean the node would have no peer candidates at all.
+      reuse-known-nodes = true
 
       # Scan interval for discovery
-      scan-interval = 30.seconds
+      scan-interval = 15.minutes
 
       # Discovery message expiration time
-      message-expiration = 90.minutes
+      message-expiration = 1.minute
 
-      # (TODO: remove me once full protocol is in place)
-      scan-max-nodes = 20
+      # Maximum amount a message can be expired by,
+      # accounting for possible discrepancies between nodes' clocks.
+      max-clock-drift = 15.seconds
 
-      # (TODO: remove me once full protocol is in place)
-      max-sent-neighbours = 10
+      # Maximum number of peers in each k-bucket.
+      kademlia-bucket-size = 16
+
+      # Timeout for individual requests like Ping.
+      request-timeout = 3.seconds
+
+      # Timeout to collect all possible responses for a FindNode request.
+      kademlia-timeout = 7.seconds
+
+      # Maximum number of messages in the queue associated with a UDP channel.
+      channel-capacity = 100
     }
 
     known-nodes {
