ETCM-168: Add kademlia-alpha to config.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -93,6 +93,9 @@ mantis {
       # Timeout to collect all possible responses for a FindNode request.
       kademlia-timeout = 7.seconds
 
+      # Level of concurrency during lookups and enrollment.
+      kademlia-alpha = 3
+
       # Maximum number of messages in the queue associated with a UDP channel.
       channel-capacity = 100
     }
