etcm-193 added possibility to configure target PoW time

--- a/src/main/resources/chains/test-chain.conf
+++ b/src/main/resources/chains/test-chain.conf
@@ -3,6 +3,10 @@
   # 1 - mainnet, 7 - mordor
   network-id = 1
 
+  # Possibility to set Proof of Work target time for testing purposes.
+  # null means that the standard difficulty calculation rules are used
+  pow-target-time = null
+
   # Frontier block number
   frontier-block-number = "0"
 
