--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -22,6 +22,7 @@ mantis {
     network = "test"
 
     test {
+      pow-target-time = null
       frontier-block-number = "0"
       eip106-block-number = "1000000000000000000"
       eip150-block-number = "2463000"
