[ETCM-286] Adjustments to rpc tests

--- a/src/rpcTest/resources/privateNetConfig/conf/rpc-test-private.conf
+++ b/src/rpcTest/resources/privateNetConfig/conf/rpc-test-private.conf
@@ -8,7 +8,7 @@ mantis {
 
     network = "rpc-test-private"
 
-    rpc-test-private = ${mantis.blockchains.base}
+    rpc-test-private = ${mantis.blockchains.etc}
     rpc-test-private {
       dao = null
       custom-genesis-file = ./conf/rpc-test-private-genesis.json
