ETCM-168: Use null for unset host.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -54,7 +54,7 @@ mantis {
       discovery-enabled = true
 
       # Externally visible hostname or IP.
-      host = ""
+      host = null
 
       # Listening interface for discovery protocol
       interface = "0.0.0.0"
