[ETCM-251] faucet healthcheck (#768)
* init refactor

* add refactor from JsonRpcController

* add refactor from JsonRpcController

* change rpc fuacet

* remove faucet api

* change faucet config

* fix test

* change properties

* add new endpoints from faucet

* remove config from limit request

* change name from JsonRpcBaseController

* fix test

* change faucet implicits

* change monix task -- add now

* remove configs from http

* fix test

* change test

Co-authored-by: Piotr Paradziński <adres.mistrza@gmail.com>

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -21,12 +21,6 @@ faucet {
   # Transaction value
   tx-value = 1000000000000000000
 
-  # Faucet listen interface
-  listen-interface = "127.0.0.1"
-
-  # Faucet listen port
-  listen-port = 8099
-
   # Faucet cors config
   cors-allowed-origins = "*"
 
@@ -36,8 +30,6 @@ faucet {
   # How often can a single IP address send a request
   min-request-interval = 1.minute
 
-  # How many ip addr -> timestamp entries to store
-  latest-timestamp-cache-size = 1024
 }
 
 logging {
@@ -49,4 +41,57 @@ logging {
 
   # Logs filename
   logs-file = "faucet"
+}
+
+mantis {
+
+  network {
+
+    rpc {
+      http {
+        # JSON-RPC mode
+        # Available modes are: http, https
+        # Choosing https requires creating a certificate and setting up 'certificate-keystore-path' and
+        # 'certificate-password-file'
+        # See: https://github.com/input-output-hk/mantis/wiki/Creating-self-signed-certificate-for-using-JSON-RPC-with-HTTPS
+        mode = "http"
+
+        # Whether to enable JSON-RPC HTTP(S) endpoint
+        enabled = true
+
+        # Listening address of JSON-RPC HTTP(S) endpoint
+        interface = "localhost"
+
+        # Listening port of JSON-RPC HTTP(S) endpoint
+        port = 8547
+
+        # Path to the keystore storing the certificates (used only for https)
+        # null value indicates HTTPS is not being used
+        certificate-keystore-path = null
+
+        # Type of certificate keystore being used
+        # null value indicates HTTPS is not being used
+        certificate-keystore-type = null
+
+        # File with the password used for accessing the certificate keystore (used only for https)
+        # null value indicates HTTPS is not being used
+        certificate-password-file = null
+
+        # Domains allowed to query RPC endpoint. Use "*" to enable requests from
+        # any domain.
+        cors-allowed-origins = []
+      }
+
+      ipc {
+        # Whether to enable JSON-RPC over IPC
+        enabled = false
+
+        # Path to IPC socket file
+        socket-file = ${faucet.datadir}"/mantis.ipc"
+      }
+
+      # Enabled JSON-RPC APIs over the JSON-RPC endpoint
+      apis = "faucet"
+    }
+  }
 }
