add faucet actors

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -4,10 +4,10 @@ faucet {
   datadir = ${user.home}"/.mantis-faucet"
 
   # Wallet address used to send transactions from
-  wallet-address = "0x00"
+  wallet-address = "0xd1c7b7daf09ee87ff68f2a1e27319ad006ebca93"
 
   # Password to unlock faucet wallet
-  wallet-password = ""
+  wallet-password = "12345678"
 
   # Path to directory where wallet key is stored
   keystore-dir = ${faucet.datadir}"/keystore"
@@ -30,6 +30,9 @@ faucet {
   # How often can a single IP address send a request
   min-request-interval = 1.minute
 
+  response-timeout = 2.seconds
+  initialization-retry-delay = 2.seconds
+  initialization-max-retries  = 4
 }
 
 logging {
