add supervisor config

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -31,8 +31,19 @@ faucet {
   min-request-interval = 1.minute
 
   response-timeout = 2.seconds
+
   initialization-retry-delay = 2.seconds
+
   initialization-max-retries  = 4
+
+  supervisor {
+    min-backoff = 3.seconds
+    man-backoff = 30.seconds
+    random-factor = 0.2
+    auto-reset = 10.seconds
+    attempts = 4
+    delay = 0.1
+  }
 }
 
 logging {
