--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -135,3 +135,49 @@ mantis {
     allow-no-passphrase = true
   }
 }
+
+faucet {
+
+  # Base directory where all the data used by the fauced is stored
+  datadir = "/tmp/mantis-faucet-test"
+
+  # Wallet address used to send transactions from
+  wallet-address = "0xd1c7b7daf09ee87ff68f2a1e27319ad006ebca93"
+
+  # Password to unlock faucet wallet
+  wallet-password = "walletNotSecure"
+
+  # Path to directory where wallet key is stored
+  keystore-dir = ${faucet.datadir}"/keystore"
+
+  # Transaction gas price
+  tx-gas-price = 20000000000
+
+  # Transaction gas limit
+  tx-gas-limit = 90000
+
+  # Transaction value
+  tx-value = 1000000000000000000
+
+
+  # Address of Ethereum node used to send the transaction
+  rpc-address = "http://127.0.0.1:8546/"
+
+  # How often can a single IP address send a request
+  min-request-interval = 1.minute
+
+  response-timeout = 2.seconds
+
+  initialization-retry-delay = 2.seconds
+
+  initialization-max-retries  = 4
+
+  supervisor {
+    min-backoff = 3.seconds
+    man-backoff = 30.seconds
+    random-factor = 0.2
+    auto-reset = 10.seconds
+    attempts = 4
+    delay = 0.1
+  }
+}
