add new properties

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -30,11 +30,9 @@ faucet {
   # How often can a single IP address send a request
   min-request-interval = 1.minute
 
+  handler-timeout = 2.seconds
+
   response-timeout = 2.seconds
-
-  initialization-retry-delay = 2.seconds
-
-  initialization-max-retries  = 4
 
   supervisor {
     min-backoff = 3.seconds
