--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -4,10 +4,10 @@ faucet {
   datadir = ${user.home}"/.mantis-faucet"
 
   # Wallet address used to send transactions from
-  wallet-address = "0xd1c7b7daf09ee87ff68f2a1e27319ad006ebca93"
+  wallet-address = "0x00"
 
   # Password to unlock faucet wallet
-  wallet-password = "12345678"
+  wallet-password = ""
 
   # Path to directory where wallet key is stored
   keystore-dir = ${faucet.datadir}"/keystore"
@@ -30,10 +30,13 @@ faucet {
   # How often can a single IP address send a request
   min-request-interval = 1.minute
 
-  handler-timeout = 2.seconds
+  # Response time-out to get handler actor
+  handler-timeout = 1.seconds
 
+  # Response time-out from actor resolve
   response-timeout = 2.seconds
 
+  # Supervisor with BackoffSupervisor pattern
   supervisor {
     min-backoff = 3.seconds
     man-backoff = 30.seconds
