[ETCM-366] Add restricted Ethash Consensus

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -229,7 +229,7 @@ mantis {
     # Declaring the protocol here means that a more protocol-specific configuration
     # is pulled from the corresponding consensus implementation.
     # For example, in case of ethash, a section named `ethash` is used.
-    # Available protocols: ethash, mocked
+    # Available protocols: ethash, mocked, restricted-ethash
     # In case of mocked, remember to enable qa api
     protocol = ethash
 
