--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -4,10 +4,10 @@ faucet {
   datadir = ${user.home}"/.mantis-faucet"
 
   # Wallet address used to send transactions from
-  wallet-address = "0x00"
+  wallet-address = "0xd1c7b7daf09ee87ff68f2a1e27319ad006ebca93"
 
   # Password to unlock faucet wallet
-  wallet-password = ""
+  wallet-password = "12345678"
 
   # Path to directory where wallet key is stored
   keystore-dir = ${faucet.datadir}"/keystore"
