ETCM-365: Instead of override, use -Dmantis.client-id as an agumented identity.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 mantis {
-  # Optionally override the client ID sent in Hello messages.
+  # Optionally augment the client ID sent in Hello messages.
   client-id = null
 
   # Version string (reported by an RPC method)
