[Tools] Remove bunch of unnecessary debugging code

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -205,7 +205,7 @@ mantis {
 
     pending-tx-manager-query-timeout = 5.seconds
 
-    transaction-timeout = 30.minutes
+    transaction-timeout = 2.minutes
 
     # Used in mining (ethash)
     get-transaction-from-pool-timeout = 5.seconds
@@ -564,7 +564,7 @@ mantis {
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "INFO"
+  loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
   log-dead-letters = off
