change certificate config

--- a/src/rpcTest/resources/privateNetConfig/conf/rpc-test-private.conf
+++ b/src/rpcTest/resources/privateNetConfig/conf/rpc-test-private.conf
@@ -48,9 +48,7 @@ mantis {
         interface = "localhost"
         port = 8546
 
-        certificate-keystore-path = null
-        certificate-keystore-type = null
-        certificate-password-file = null
+        certificate = null
 
         cors-allowed-origins = "*"
       }
