--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -159,17 +159,20 @@ mantis {
         # Listening port of JSON-RPC HTTP(S) endpoint
         port = 8546
 
+        certificate = null
+        #certificate {
         # Path to the keystore storing the certificates (used only for https)
         # null value indicates HTTPS is not being used
-        certificate-keystore-path = null
+        #  keystore-path = null
 
         # Type of certificate keystore being used
         # null value indicates HTTPS is not being used
-        certificate-keystore-type = null
+        #  keystore-type = null
 
         # File with the password used for accessing the certificate keystore (used only for https)
         # null value indicates HTTPS is not being used
-        certificate-password-file = null
+        #  password-file = null
+        #}
 
         # Domains allowed to query RPC endpoint. Use "*" to enable requests from
         # any domain.
