[Chore] Update testnet internal configs

--- a/src/universal/conf/base-testnet.conf
+++ b/src/universal/conf/base-testnet.conf
@@ -1,8 +1,9 @@
 include "app.conf"
 
+# Configurations required for setting up a testnet of only Mantis clients
 mantis {
   sync {
-    # Fast sync is disabled as it's an experimental feature for now
+    # Fast sync is disabled, requires coordination to see if it affects our deployments if we turn this on
     do-fast-sync = false
 
     # All testnet members are assumed to be honest so blacklisting is turned off
@@ -12,10 +13,6 @@ mantis {
   pruning {
     # Pruning is disabled as it's an experimental feature for now
     mode = "archive"
-  }
-
-  blockchains {
-    network = "testnet-internal"
   }
 
   consensus {
