--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 mantis {
   # Optionally augment the client ID sent in Hello messages.
-  client-id = null
+  client-identity = null
 
   # Version string (reported by an RPC method)
   client-version = "mantis/v2.0"
