--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,6 +1,6 @@
 mantis {
-  # Identifier used when connecting to other clients
-  client-id = "mantis"
+  # Optionally augment the client ID sent in Hello messages.
+  client-identity = null
 
   # Version string (reported by an RPC method)
   client-version = "mantis/v2.0"
