add faucet handler builder

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -31,7 +31,7 @@ faucet {
   handler-timeout = 1.seconds
 
   # Response time-out from actor resolve
-  response-timeout = 2.seconds
+  response-timeout = 3.seconds
 
   # Supervisor with BackoffSupervisor pattern
   supervisor {
@@ -42,6 +42,9 @@ faucet {
     attempts = 4
     delay = 0.1
   }
+
+  # timeout for shutting down the ActorSystem
+  shutdown-timeout = "15.seconds"
 }
 
 logging {
