--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -44,7 +44,7 @@ faucet {
   }
 
   # timeout for shutting down the ActorSystem
-  shutdown-timeout = "15.seconds"
+  shutdown-timeout = 15.seconds
 }
 
 logging {
