[ETCM-252] faucet - handle account (#783)
* add faucet actors

* add supervisor config

* change test name

* change status from faucet

* add wallet service spec

* add test from actor

* add more test

* add new properties

* fix properties

* add changes from faucet rpc service

* faucet shutdown when I can't load the wallet

* remove todo of name

* add faucet handler builder

* fix config

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -27,6 +27,24 @@ faucet {
   # How often can a single IP address send a request
   min-request-interval = 1.minute
 
+  # Response time-out to get handler actor
+  handler-timeout = 1.seconds
+
+  # Response time-out from actor resolve
+  response-timeout = 3.seconds
+
+  # Supervisor with BackoffSupervisor pattern
+  supervisor {
+    min-backoff = 3.seconds
+    man-backoff = 30.seconds
+    random-factor = 0.2
+    auto-reset = 10.seconds
+    attempts = 4
+    delay = 0.1
+  }
+
+  # timeout for shutting down the ActorSystem
+  shutdown-timeout = 15.seconds
 }
 
 logging {
