[Chore] Update testnet internal configs (#801)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -293,7 +293,9 @@ mantis {
 
     test {include "chains/test-chain.conf"}
 
-    testnet-internal {include "chains/testnet-internal-chain.conf"}
+    testnet-internal-nomad {include "chains/testnet-internal-nomad-chain.conf"}
+
+    testnet-internal-gac {include "chains/testnet-internal-gac-chain.conf"}
   }
 
   sync {
