[Chore] Update nomad testnet configs

--- a/src/main/resources/chains/testnet-internal-nomad-chain.conf
+++ b/src/main/resources/chains/testnet-internal-nomad-chain.conf
@@ -85,12 +85,12 @@
     # Proto-treasury fork block number (ETC only, but deactivated for now)
     # https://ecips.ethereumclassic.org/ECIPs/ecip-1098
     treasury-address = "0011223344556677889900112233445566778899"
-    ecip1098-block-number = "1000000000000000000"
+    ecip1098-block-number = "0"
 
     # Checkpointing fork block number
     # https://ecips.ethereumclassic.org/ECIPs/ecip-1097
     # Has to be equal or greater than ecip1098-block-number
-    ecip1097-block-number = "1000000000000000000"
+    ecip1097-block-number = "0"
 
     # Epoch calibration block number
     # https://ecips.ethereumclassic.org/ECIPs/ecip-1099
