[ETCM-135] Move getAccountTransactions into mantis namespace

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -14,7 +14,7 @@ mantis {
 
   network.peer.max-pending-peers = 1
 
-  network.rpc.apis = "eth,web3,net,personal,daedalus,debug,qa,checkpointing"
+  network.rpc.apis = "eth,web3,net,personal,mantis,debug,qa,checkpointing"
 
   blockchains {
     network = "test"
