--- a/src/universal/conf/testmode.conf
+++ b/src/universal/conf/testmode.conf
@@ -17,7 +17,7 @@ mantis {
   }
 
   network.rpc {
-    apis = "eth,web3,net,personal,daedalus,test,iele,debug,qa,checkpointing"
+    apis = "eth,web3,net,personal,mantis,test,iele,debug,qa,checkpointing"
   }
 
 }
