--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -207,11 +207,11 @@ mantis {
       }
 
       # Enabled JSON-RPC APIs over the JSON-RPC endpoint
-      # Available choices are: web3, eth, net, personal, daedalus, test, iele, debug, qa, checkpointing
-      apis = "eth,web3,net,personal,daedalus,debug,qa,checkpointing"
+      # Available choices are: web3, eth, net, personal, mantis, test, iele, debug, qa, checkpointing
+      apis = "eth,web3,net,personal,mantis,debug,qa,checkpointing"
 
-      # Maximum number of blocks for daedalus_getAccountTransactions
-      account-transactions-max-blocks = 50000
+      # Maximum number of blocks for mantis_getAccountTransactions
+      account-transactions-max-blocks = 1000
 
       net {
         peer-manager-timeout = 5.seconds
