[ETCM-366] Add new conf option to new chain settings

--- a/src/main/resources/chains/test-chain.conf
+++ b/src/main/resources/chains/test-chain.conf
@@ -160,4 +160,8 @@
 
   # Set of initial nodes
   bootstrap-nodes = []
+
+  # List of hex encoded public keys of miners which can extend chain (only used when using restricted-ethash consensus)
+  # empty means that everybody can mine
+  allowed-miners = []
 }
