add tls default folder

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -4,10 +4,10 @@ faucet {
   datadir = ${user.home}"/.mantis-faucet"
 
   # Wallet address used to send transactions from
-  wallet-address = "0xd1c7b7daf09ee87ff68f2a1e27319ad006ebca93"
+  wallet-address = "0x00"
 
   # Password to unlock faucet wallet
-  wallet-password = "12345678"
+  wallet-password = ""
 
   # Path to directory where wallet key is stored
   keystore-dir = ${faucet.datadir}"/keystore"
@@ -69,7 +69,7 @@ mantis {
         # Choosing https requires creating a certificate and setting up 'certificate-keystore-path' and
         # 'certificate-password-file'
         # See: https://github.com/input-output-hk/mantis/wiki/Creating-self-signed-certificate-for-using-JSON-RPC-with-HTTPS
-        mode = "http"
+        mode = "https"
 
         # Whether to enable JSON-RPC HTTP(S) endpoint
         enabled = true
@@ -84,15 +84,15 @@ mantis {
         #certificate {
         # Path to the keystore storing the certificates (used only for https)
         # null value indicates HTTPS is not being used
-        #  keystore-path = null
+        #  keystore-path = "tls/mantisCA.p12"
 
         # Type of certificate keystore being used
         # null value indicates HTTPS is not being used
-        #  keystore-type = null
+        #  keystore-type = "pkcs12"
 
         # File with the password used for accessing the certificate keystore (used only for https)
         # null value indicates HTTPS is not being used
-        #  password-file = null
+        #  password-file = "tls/password"
         #}
 
         # Domains allowed to query RPC endpoint. Use "*" to enable requests from
