--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -170,7 +170,7 @@ mantis {
         # Choosing https requires creating a certificate and setting up 'certificate-keystore-path' and
         # 'certificate-password-file'
         # See: https://github.com/input-output-hk/mantis/wiki/Creating-self-signed-certificate-for-using-JSON-RPC-with-HTTPS
-        mode = "http"
+        mode = "https"
 
         # Whether to enable JSON-RPC HTTP(S) endpoint
         enabled = true
@@ -185,15 +185,15 @@ mantis {
         #certificate {
         # Path to the keystore storing the certificates (used only for https)
         # null value indicates HTTPS is not being used
-        #  keystore-path = null
+        #  keystore-path = "tls/mantisCA.p12"
 
         # Type of certificate keystore being used
         # null value indicates HTTPS is not being used
-        #  keystore-type = null
+        #  keystore-type = "pkcs12"
 
         # File with the password used for accessing the certificate keystore (used only for https)
         # null value indicates HTTPS is not being used
-        #  password-file = null
+        #  password-file = "tls/password"
         #}
 
         # Domains allowed to query RPC endpoint. Use "*" to enable requests from
@@ -284,7 +284,7 @@ mantis {
   }
 
   blockchains {
-    network = "testnet-internal"
+    network = "etc"
 
     etc {include "chains/etc-chain.conf"}
 
