[ETCM-403] PExpose application.conf and chains configs directory

--- a/src/universal/conf/app.conf
+++ b/src/universal/conf/app.conf
@@ -1,5 +1,5 @@
 # This is the base configuration file for the Mantis ETC client.
 
-# This where all the default settings are defined (this file is packaged within the executable).
+# This where all the default settings are defined.
 # It should always go at the top.
-include "application.conf"
+include "base.conf"
