Add `allowed-miners` list to testnet configs

--- a/src/main/resources/chains/testnet-internal-nomad-chain.conf
+++ b/src/main/resources/chains/testnet-internal-nomad-chain.conf
@@ -153,5 +153,5 @@
 
     # List of hex encoded public keys of miners which can extend chain (only used when using restricted-ethash consensus)
     # empty means that everybody can mine
-    allowed-miners = []
+    include "testnet-allowed-miners"
 }
