fix and add README TLS config

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -151,7 +151,10 @@ faucet {
 
   tx-value = 1000000000000000000
 
-  rpc-address = "http://127.0.0.1:8546/"
+  rpc-client {
+    rpc-address = "http://127.0.0.1:8546/"
+    certificate = null
+  }
 
   min-request-interval = 1.minute
 
