[Conf] Disable mining by default at internal testnet

--- a/src/universal/conf/base-testnet.conf
+++ b/src/universal/conf/base-testnet.conf
@@ -17,7 +17,7 @@ mantis {
 
   consensus {
     coinbase = "0011223344556677889900112233445566778899" # has to be changed for each node
-    mining-enabled = true
+    mining-enabled = false
   }
 
   network {
