[ETCM-215] faucet rpc client (#798)
* add new RpcClient Base

* add security in rpc client

* change ssl config

* change certificate config

* change ssl config

* change package from json rpc client

* add new test

* improvement in ssl context

* add tls default folder

* add new tls config from rpc client

* fix and add README TLS config

* change rpcclient

* change name ssl function

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -21,8 +21,26 @@ faucet {
   # Transaction value
   tx-value = 1000000000000000000
 
-  # Address of Ethereum node used to send the transaction
-  rpc-address = "http://127.0.0.1:8546/"
+  rpc-client {
+    # Address of Ethereum node used to send the transaction
+    rpc-address = "http://127.0.0.1:8546/"
+
+    # certificate of Ethereum node used to send the transaction when use HTTP(S)
+    certificate = null
+    #certificate {
+    # Path to the keystore storing the certificates (used only for https)
+    # null value indicates HTTPS is not being used
+    #  keystore-path = "tls/mantisCA.p12"
+
+    # Type of certificate keystore being used
+    # null value indicates HTTPS is not being used
+    #  keystore-type = "pkcs12"
+
+    # File with the password used for accessing the certificate keystore (used only for https)
+    # null value indicates HTTPS is not being used
+    #  password-file = "tls/password"
+    #}
+  }
 
   # How often can a single IP address send a request
   min-request-interval = 1.minute
@@ -80,17 +98,21 @@ mantis {
         # Listening port of JSON-RPC HTTP(S) endpoint
         port = 8099
 
+        # certificate when use JSON-RPC HTTP(S)
+        certificate = null
+        #certificate {
         # Path to the keystore storing the certificates (used only for https)
         # null value indicates HTTPS is not being used
-        certificate-keystore-path = null
+        #  keystore-path = "tls/mantisCA.p12"
 
         # Type of certificate keystore being used
         # null value indicates HTTPS is not being used
-        certificate-keystore-type = null
+        #  keystore-type = "pkcs12"
 
         # File with the password used for accessing the certificate keystore (used only for https)
         # null value indicates HTTPS is not being used
-        certificate-password-file = null
+        #  password-file = "tls/password"
+        #}
 
         # Domains allowed to query RPC endpoint. Use "*" to enable requests from
         # any domain.
