[ETCM-331] Updates based on review (WIP)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -204,7 +204,7 @@ mantis {
 
         # Ip Limit tracking for JSON-RPC requests
         # Limits the amount of request the same ip can perform in a given amount of time
-        ip-restriction {
+        rate-limit {
           # If enabled, restrictions are applied
           enabled = false
 
