[ETCM-432] Provide single place to define rpc request timeout and increase it comparing to default values

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -215,6 +215,9 @@ mantis {
       # Available choices are: web3, eth, net, personal, mantis, test, iele, debug, qa, checkpointing
       apis = "eth,web3,net,personal,mantis,debug,qa,checkpointing"
 
+      # Max time to serve response
+      call-timeout = 30.seconds
+
       # Maximum number of blocks for mantis_getAccountTransactions
       account-transactions-max-blocks = 1000
 
@@ -593,6 +596,8 @@ akka {
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
   log-dead-letters = off
+
+  http.server.request-timeout = ${mantis.network.rpc.call-timeout}
 
   coordinated-shutdown.phases {
     actor-system-terminate {
