[ETCM-331] Separate RateLimit validation in a different trait

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -118,7 +118,7 @@ mantis {
         # any domain.
         cors-allowed-origins = []
 
-        # Ip Limit tracking for JSON-RPC requests
+        # Rate Limit for JSON-RPC requests
         # Limits the amount of request the same ip can perform in a given amount of time
         rate-limit {
           # If enabled, restrictions are applied
