add rpc client timeout

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -160,7 +160,8 @@ faucet {
 
   handler-timeout = 2.seconds
 
-  response-timeout = 2.seconds
+  response-timeout = 1.seconds
+  client-timeout = 2.seconds
 
   supervisor {
     min-backoff = 3.seconds
