--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -49,7 +49,10 @@ faucet {
   handler-timeout = 1.seconds
 
   # Response time-out from actor resolve
-  response-timeout = 3.seconds
+  response-timeout = 1.seconds
+
+  # Response time-out from rpc client resolve
+  client-timeout = 3.seconds
 
   # Supervisor with BackoffSupervisor pattern
   supervisor {
