[FIX] Fix retry config option

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -112,7 +112,7 @@ mantis {
 
     peer {
       # Retry delay for failed attempt at connecting to a peer
-      connect-retry-delay = 1 minute
+      connect-retry-delay = 5 seconds
 
       # Maximum number of reconnect attempts after the connection has been initiated.
       # After that, the connection will be dropped until its initiated again (eg. by peer discovery)
