--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -156,6 +156,7 @@ faucet {
   rpc-client {
     rpc-address = "http://127.0.0.1:8546/"
     certificate = null
+    timeout = 2.seconds
   }
 
   min-request-interval = 1.minute
@@ -163,11 +164,10 @@ faucet {
   handler-timeout = 2.seconds
 
   response-timeout = 1.seconds
-  client-timeout = 2.seconds
 
   supervisor {
     min-backoff = 3.seconds
-    man-backoff = 30.seconds
+    max-backoff = 30.seconds
     random-factor = 0.2
     auto-reset = 10.seconds
     attempts = 4
