ETCM-446: Add min-outgoing-peers setting. Only seek more connections until min handshaked is reached.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -142,7 +142,10 @@ mantis {
       # Maximum MPT components in a single response message (as a blockchain host)
       max-mpt-components-per-message = 200
 
-      # Maximum number of peers this node can connect to
+      # Minimum number of peers this node tries to connect to at all times
+      min-outgoing-peers = 10
+
+      # Maximum number of peers this node can connect to at any time
       max-outgoing-peers = 50
 
       # Maximum number of peers that can connect to this node
