--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -8,6 +8,7 @@ mantis {
     peer {
       connect-retry-delay = 1 second
       disconnect-poison-pill-timeout = 1 second
+      min-outgoing-peers = 3
       max-outgoing-peers = 3
       max-incoming-peers = 1
       max-pending-peers = 1
