ETCM-466: Prune incoming peers beyond a certain age if hit the maximum limit.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -151,6 +151,12 @@ mantis {
       # Maximum number of peers that can connect to this node
       max-incoming-peers = 50
 
+      # Number of incoming peers to prune if we hit the maximum, to free up slots for new connections.
+      prune-incoming-peers = 10
+
+      # Minimum age of peers before they can be selected for pruning, and the minimum time to pass between pruning attempts.
+      min-prune-age = 30.minutes
+
       # Maximum number of peers that can be connecting to this node
       max-pending-peers = 20
 
