change property name from actor communication margin

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -163,7 +163,7 @@ faucet {
 
   handler-timeout = 2.seconds
 
-  response-timeout = 1.seconds
+  actor-communication-margin = 1.seconds
 
   supervisor {
     min-backoff = 3.seconds
