--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -52,7 +52,7 @@ faucet {
   handler-timeout = 1.seconds
 
   # Response time-out from actor resolve
-  response-timeout = 1.seconds
+  actor-communication-margin = 1.seconds
 
   # Supervisor with BackoffSupervisor pattern
   supervisor {
