--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -602,7 +602,8 @@ mantis {
 
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
-  loglevel = "DEBUG"
+  # Not using ${logging.logs-level} because it might be set to TRACE, which our version of Akka doesn't have.
+  loglevel = "INFO"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
   log-dead-letters = off
@@ -656,4 +657,7 @@ logging {
 
   # Logs filename
   logs-file = "mantis"
+
+  # Logs level
+  logs-level = "INFO"
 }
