[ETCM-396] faucet timeout (#829)

--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -156,17 +156,18 @@ faucet {
   rpc-client {
     rpc-address = "http://127.0.0.1:8546/"
     certificate = null
+    timeout = 2.seconds
   }
 
   min-request-interval = 1.minute
 
   handler-timeout = 2.seconds
 
-  response-timeout = 2.seconds
+  actor-communication-margin = 1.seconds
 
   supervisor {
     min-backoff = 3.seconds
-    man-backoff = 30.seconds
+    max-backoff = 30.seconds
     random-factor = 0.2
     auto-reset = 10.seconds
     attempts = 4
