ETCM-446: Raise max-outgoing-peers to 50.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -145,10 +145,12 @@ mantis {
       # Minimum number of peers this node tries to connect to at all times
       min-outgoing-peers = 20
 
-      # Maximum number of peers this node can connect to at any time
-      max-outgoing-peers = 30
+      # Maximum number of peers this node can connect to at any time.
+      # It's a bit higher than max-incoming-peers so that the node can quickly churn through incompatible peers after startup.
+      max-outgoing-peers = 50
 
-      # Maximum number of peers that can connect to this node
+      # Maximum number of peers that can connect to this node.
+      # Should be at least as much as `min-outgoing-peers` so on a network level `total(max-in) >= total(min-out)`
       max-incoming-peers = 30
 
       # Number of incoming peers to prune if we hit the maximum, to free up slots for new connections.
