ETCM-463: Separate config for stats.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -163,6 +163,12 @@ mantis {
       # Peer which disconnect during tcp connection becouse of other reasons will not be retried for this long duration
       # other reasons include: timeout during connection, wrong protocol, incompatible network
       long-blacklist-duration = 30.minutes
+
+      # Resolution of moving window of peer statistics.
+      # Will be multiplied by `stat-slot-count` to give the overall length of peer statistics availability.
+      stat-slot-duration = 1.minute
+      # How many slots of peer statistics to keep in the moving window, e.g. 60 * 1.minute to keep stats for the last hour with 1 minute resolution.
+      stat-slot-count = 60
     }
 
     rpc {
