ETCM-446: Configure 12 hour stats duration.

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -177,9 +177,10 @@ mantis {
 
       # Resolution of moving window of peer statistics.
       # Will be multiplied by `stat-slot-count` to give the overall length of peer statistics availability.
-      stat-slot-duration = 1.minute
+      stat-slot-duration = 10.minutes
+
       # How many slots of peer statistics to keep in the moving window, e.g. 60 * 1.minute to keep stats for the last hour with 1 minute resolution.
-      stat-slot-count = 60
+      stat-slot-count = 72
     }
 
     rpc {
