--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -12,6 +12,8 @@ mantis {
       max-outgoing-peers = 3
       max-incoming-peers = 1
       max-pending-peers = 1
+      prune-incoming-peers = 1
+      min-prune-age = 0.seconds
       update-nodes-initial-delay = 5.seconds
       update-nodes-interval = 10.seconds
     }
