[Chore] review link internal-nomad testnet conf
Signed-off-by: lemastero <piotr.paradzinski@iohk.io>

--- a/src/universal/conf/sagano.conf
+++ b/src/universal/conf/sagano.conf
@@ -1,12 +1,1 @@
-include "base-testnet.conf"
-
-mantis {
-  blockchains {
-    network = "testnet-internal-nomad"
-  }
-
-  network {
-    protocol-version = 64
-  }
-
-}
+include "testnet-internal-nomad.conf"
