--- a/docker/prometheus.yml
+++ b/docker/prometheus.yml
@@ -27,3 +27,13 @@ scrape_configs:
     - localhost:13798
     labels:
       alias: mantis-node
+- job_name: akka
+  honor_timestamps: true
+  scrape_interval: 10s
+  scrape_timeout: 10s
+  scheme: http
+  static_configs:
+    - targets:
+        - localhost:9095
+      labels:
+        alias: mantis-akka
