--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -586,15 +586,7 @@ mantis {
     }
   }
 
-  metrics {
-    # Set to `true` iff your deployment supports metrics collection.
-    # We expose metrics using a Prometheus server
-    # We default to `false` here because we do not expect all deployments to support metrics collection.
-    enabled = false
-
-    # The port for setting up a Prometheus server over localhost.
-    port = 13798
-  }
+  include "metrics.conf"
 
   async {
     ask-timeout = 1.second
