--- a/src/main/resources/metrics.conf
+++ b/src/main/resources/metrics.conf
@@ -21,11 +21,11 @@ kamon.instrumentation.akka.filters {
   routers {
     includes = ["**"]
   }
-}
 
-kamon.instrumentation.akka.filters.groups {
-  worker-actors {
-    includes = [ "mantis_system/user/*" ]
+  groups {
+    worker-actors {
+      includes = [ "mantis_system/user/*" ]
+    }
   }
 }
 
