add script from setup docker compose

--- a/docker/monitoring/grafana/Dockerfile
+++ b/docker/monitoring/grafana/Dockerfile
@@ -1,4 +1,4 @@
-FROM grafana/grafana:latest
+FROM grafana/grafana:7.3.6
 ADD ./provisioning /etc/grafana/provisioning
 ADD ./grafana.ini /etc/grafana/grafana.ini
 ADD ./dashboards /var/lib/grafana/dashboards
