--- a/src/main/resources/metrics.conf
+++ b/src/main/resources/metrics.conf
@@ -1,4 +1,4 @@
-metrics {
+mantis.metrics {
   # Set to `true` iff your deployment supports metrics collection.
   # We expose metrics using a Prometheus server
   # We default to `false` here because we do not expect all deployments to support metrics collection.
@@ -28,3 +28,5 @@ kamon.instrumentation.akka.filters {
     }
   }
 }
+
+kanela.show-banner = false
