Working akka-micrometer stats

--- a/src/main/resources/metrics.conf
+++ b/src/main/resources/metrics.conf
@@ -2,7 +2,7 @@ mantis.metrics {
   # Set to `true` iff your deployment supports metrics collection.
   # We expose metrics using a Prometheus server
   # We default to `false` here because we do not expect all deployments to support metrics collection.
-  enabled = false
+  enabled = true
 
   # The port for setting up a Prometheus server over localhost.
   port = 13798
@@ -30,3 +30,36 @@ kamon.instrumentation.akka.filters {
 }
 
 kanela.show-banner = false
+
+micrometer.akka {
+  histogram.buckets.enabled = true
+  match.events = true
+  # executor-service.style can be `internal` or `core`
+  # metrics are presented in legacy style or registered using io.micrometer.core.instrument.binder.jvm.ExecutorServiceMetrics
+  executor-service.style = "internal"
+  metric.filters {
+    akka-actor {
+      includes = [ "**/user/*" ]
+      excludes = [ "*/system/**", "*/user/IO-**" ]
+    }
+
+    akka-router {
+      includes = ["**"]
+      excludes = []
+    }
+
+    akka-dispatcher {
+      includes = ["**"]
+      excludes = []
+    }
+
+    akka-actor-groups {
+      all {
+        includes = ["**"]
+        excludes = [ "*/system/**", "*/user/IO-**" ]
+      }
+    }
+  }
+}
+
+
