--- a/docker/monitoring/docker-compose.yml
+++ b/docker/monitoring/docker-compose.yml
@@ -5,7 +5,7 @@ volumes:
     grafana_data: {}
 
 networks:
-  back-tier:
+  mantis-net:
 
 services:
 
@@ -26,7 +26,7 @@ services:
     depends_on:
       - mantis
     networks:
-      - back-tier
+      - mantis-net
     restart: always
 
   mantis:
@@ -36,7 +36,7 @@ services:
       - '13798:13798'
       - '9095:9095'
     networks:
-      - back-tier
+      - mantis-net
     restart: always
 
   grafana:
@@ -49,6 +49,6 @@ services:
       - grafana_data:/var/lib/grafana
       - ./grafana/provisioning/:/etc/grafana/provisioning/
     networks:
-      - back-tier
+      - mantis-net
     restart: always
 
