--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -631,6 +631,14 @@ akka {
       timeout = 15 s
     }
   }
+
+  actor {
+    debug {
+      # enable function of LoggingReceive, which is to log any received message at
+      # DEBUG level
+      receive = on
+    }
+  }
 }
 
 
