fix - adding metrics config in the package build

--- a/src/universal/conf/faucet.conf
+++ b/src/universal/conf/faucet.conf
@@ -74,6 +74,9 @@ logging {
 
   # Logs filename
   logs-file = "faucet"
+
+  # Logs level
+  logs-level = "INFO"
 }
 
 mantis {
@@ -145,3 +148,5 @@ mantis {
     }
   }
 }
+
+kanela.show-banner = false
