--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -165,12 +165,12 @@ mantis {
       # Newly discovered nodes connect attempt interval
       update-nodes-interval = 30.seconds
 
-      # Peer which disconnect during tcp connection becouse of too many peers will not be retried for this short duration
+      # Peer which disconnect during tcp connection because of too many peers will not be retried for this short duration
       short-blacklist-duration = 6.minutes
 
-      # Peer which disconnect during tcp connection becouse of other reasons will not be retried for this long duration
+      # Peer which disconnect during tcp connection because of other reasons will not be retried for this long duration
       # other reasons include: timeout during connection, wrong protocol, incompatible network
-      long-blacklist-duration = 30.minutes
+      long-blacklist-duration = 600.minutes
 
       # Resolution of moving window of peer statistics.
       # Will be multiplied by `stat-slot-count` to give the overall length of peer statistics availability.
