ETCM-541 attempt UPnP port mapping to aid in peer discovery

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -61,6 +61,9 @@ mantis {
       # Listening port for discovery protocol
       port = 30303
 
+      # Try automatic port forwarding via UPnP
+      automatic-port-forwarding = true
+
       # If true, the node considers the bootstrap and the previously persisted nodes
       # as already discovered and uses them as peer candidates to get blocks from.
       # Otherwise it enroll with the bootstrap nodes and gradually discover the
@@ -577,7 +580,7 @@ mantis {
       #           otherwise mantis VM will be run in the same process, but acting as an external VM (listening at `host` and `port`)
       # - none: doesn't run anything, expect the VM to be started by other means
       vm-type = "mantis"
-
+ 
       # path to the executable - optional depending on the `vm-type` setting
       executable-path = "./bin/mantis-vm"
 
