--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -179,3 +179,13 @@ faucet {
 
   shutdown-timeout = 15.seconds
 }
+
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  # Not using ${logging.logs-level} because it might be set to TRACE, which our version of Akka doesn't have.
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  logger-startup-timeout = 30s
+  log-dead-letters = off
+
+}
