ETCM-541 attempt UPnP port mapping to aid in peer discovery & connection (#929)

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -47,6 +47,9 @@ mantis {
       port = 9076
     }
 
+    # Try automatic port forwarding via UPnP
+    automatic-port-forwarding = true
+
     discovery {
 
       # Turn discovery of/off
@@ -577,7 +580,7 @@ mantis {
       #           otherwise mantis VM will be run in the same process, but acting as an external VM (listening at `host` and `port`)
       # - none: doesn't run anything, expect the VM to be started by other means
       vm-type = "mantis"
-
+ 
       # path to the executable - optional depending on the `vm-type` setting
       executable-path = "./bin/mantis-vm"
 
