adds new private network called 'pottery'

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -332,6 +332,8 @@ mantis {
     testnet-internal-nomad {include "chains/testnet-internal-nomad-chain.conf"}
 
     testnet-internal-gac {include "chains/testnet-internal-gac-chain.conf"}
+
+		pottery {include "chains/pottery-chain.conf"}
   }
 
   sync {
