--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -183,3 +183,13 @@ faucet {
 # some super slow tests should be skipped on CI (eg. mining)
 skip-super-slow-tests = false
 skip-super-slow-tests = ${?CI}
+
+akka {
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  # Not using ${logging.logs-level} because it might be set to TRACE, which our version of Akka doesn't have.
+  loglevel = "DEBUG"
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+  logger-startup-timeout = 30s
+  log-dead-letters = off
+
+}
