[Kaizen] Apply scalafmt 'rewrite.rules = SortModifiers'

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,4 +2,4 @@ version = "2.7.5"
 align.preset = some
 maxColumn = 120
 
-rewrite.rules = [AvoidInfix, RedundantBraces, RedundantParens]
+rewrite.rules = [AvoidInfix, RedundantBraces, RedundantParens, SortModifiers]
