Add logging of dead letters

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -614,10 +614,11 @@ mantis {
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   # Not using ${logging.logs-level} because it might be set to TRACE, which our version of Akka doesn't have.
-  loglevel = "INFO"
+  loglevel = "DEBUG"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
-  log-dead-letters = off
+  log-dead-letters-during-shutdown = off
+  log-dead-letters = 10
 
   coordinated-shutdown.phases {
     actor-system-terminate {
