[ETCM-313] Update the default number of requested block headers to not be higher than the default max number of headers returned

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -369,7 +369,9 @@ mantis {
     max-concurrent-requests = 50
 
     # Requested number of block headers when syncing from other peers
-    block-headers-per-request = 200
+    # Will cause an error if it's higher than max-blocks-headers-per-message of the peer we're requesting from,
+    # so this number should not be set very high.
+    block-headers-per-request = 100
 
     # Requested number of block bodies when syncing from other peers
     block-bodies-per-request = 128
