Add logging dead letters

--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -621,7 +621,8 @@ akka {
   loglevel = "INFO"
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
   logger-startup-timeout = 30s
-  log-dead-letters = off
+  log-dead-letters-during-shutdown = off
+  log-dead-letters = 5
 
   coordinated-shutdown.phases {
     actor-system-terminate {
